unpackaged/main/default/objects/litify__lp_Member__c/litify__lp_Member__c.object-meta.xml
<CustomObject>
    <label>Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>