unpackaged/main/default/objects/litify__lp_Member__c/fields/litify__lp_End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>