unpackaged/main/default/objects/litify__lp_Member__c/fields/litify__lp_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Role_Type__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify__lp_Role_Type</valueSetName>
    </valueSet>
</CustomField>