unpackaged/main/default/objects/litify__lp_Member__c/fields/litify__lp_Team__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>litify__lp_Team__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>lp_Members</relationshipName>
    <type>Lookup</type>
</CustomField>