unpackaged/main/default/objects/litify__lp_Member__c/fields/litify__lp_Template__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>