unpackaged/main/default/objects/litify__lp_Member__c/fields/litify__lp_User__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lp_Members</relationshipName>
    <type>Lookup</type>
</CustomField>